HourglassSum, PairsOfSubstringsAreAnagrams, StringsShareCommonSubstring