@@ -2,16 +2,11 @@ package impl;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Locale;
-import java.util.stream.Collectors;
-
 
 public class AnagramString {
 	public boolean areAnagramString(final String input1, final String input2) {
-
-
-		final List<Character> input1List = input1 == null ? new ArrayList<>() : input1.replace(" ", "").toLowerCase(Locale.ROOT).chars().mapToObj(c -> (char)c).collect(Collectors.toList());
-		final char[] input2Chars = input2 == null ? new char[]{} : input2.replace(" ", "").toLowerCase(Locale.ROOT).toCharArray();
+		final List<Character> input1List = new ArrayList<>(input1 == null ? new ArrayList<>() : input1.toLowerCase().chars().mapToObj(c -> (char) c).toList());
+		final char[] input2Chars = input2 == null ? new char[]{} : input2.toLowerCase().toCharArray();
 
 		if (input1List.isEmpty() && input2Chars.length == 0) {
 			return true;
